--- a/force-app/main/default/lwc/numerator/numerator.html
+++ b/force-app/main/default/lwc/numerator/numerator.html
@@ -4,7 +4,7 @@
         <p class="slds-text-align_center slds-var-m-vertical_medium">
           Count: <lightning-formatted-number value={counter}></lightning-formatted-number>
         </p>
-    <!-- controls go here -->
+    <!-- controls go here New code -->
         <c-controls
         class="slds-show slds-is-relative"
         onadd={handleIncrement}
